Nova geracao de rand

--- a/1_dataQuality.Rmd
+++ b/1_dataQuality.Rmd
@@ -1,14 +1,17 @@
-# Analise Missing
+# Relatório de qualidade de dados e análise exploratória gráfoca para o banco de dados do SUS
 
+Elias Carvalho ecacarva@gmail.com
+Adelia Batilana adeliabatilana@gmail.com
+Ricardo Pietrobon, MD, PhD rpietro@duke.edu
+
+```{r, echo=FALSE, results='hide', warning=FALSE, message=FALSE }
 library(Hmisc)
 library(ggplot2)
 library(VIM)
 
 # Le arquivo csv exportado do MySQL
-sus <- read.csv("c:/sus/sus5000rand.csv",header=T)
-sus <- read.csv("/Users/rpietro/Google Drive/R/nonpublicdata_publications/SUS/sus5000rand.csv",header=T)
-
-#label(hpv$IDADE) <- "age at the time of the first consultation"
+sus <- read.csv("c:/sus/sus5000rand.csv")
+#sus <- read.csv("/Users/rpietro/Google Drive/R/nonpublicdata_publications/SUS/sus5000rand.csv")
 
 # label SUS
 label(sus$UF_ZI) <- "Municipio Gestor"
@@ -95,15 +98,30 @@ label(sus$REGCT) <- "REGCT???"
 label(sus$RACA_COR) <- "RACA_COR???"
 label(sus$ETNIA) <- "ETNIA???"
 label(sus$ARQUIVO) <- "ARQUIVO???"
+```
 
 ## Introduction
-describe(sus, exclude.missing=TRUE)
+O principal objetivo deste relatório é fornecer informações sobre o banco de dados SUS
+The main objective of this report is to provide ....
+Detalhes metodológicos sobre este projeto podem ser encontrados em no site [Big Data Analises]
 
-#A description of missing values is provided in the Figure below, where missing values are presented in yellow.
+Abaixo está uma lista completa das variáveis, juntamente com a sua classe (tipo variável de acordo com a linguagem R) e respostas alternativas. A maioria dos nomes das variáveis devem ser intuitivos, mas um dicionário de dados é descrito a seguir:
+
+```{r, echo=FALSE, warning=FALSE }
+describe(sus, exclude.missing=FALSE)
+```
+
+Uma descrição de valores missing (representados em amarelo) são fornecidos na Figura abaixo
+
+```{r}
 library(vmv)
 tablemissing(sus)
-View(sus)
+```
+Abaixo se encontra uma aplicação do MINE (maximal Information-based Nonparametric Exploration) algoritmo do Science article (Detecting Novel Association in Large Data Sets)[http://www.sciencemag.org/content/334/6062/1518.abstract?ijkey=cRCIlh2G7AjiA&keytype=ref&siteid=sci]. Veja também (http://www.exploredata.net/)[http://www.exploredata.net/]
 
 
-
-
+```{r}
+source("http://www.exploredata.net/ftp/MINE.r")
+#MINE("/Users/rpietro/Google Drive/R/nonpublicdata_publications/HPV/hpv.csv","all.pairs")
+MINE("c:/sus/sus5000rand.csv","all.pairs")
+```
